--- a/src/pages/platformFuta/Home/FutaLandings/NewLandings/FutaLanding3.module.css
+++ b/src/pages/platformFuta/Home/FutaLandings/NewLandings/FutaLanding3.module.css
@@ -10,10 +10,14 @@
    
 }
 
-.container img{
-    width: 350px;
-    margin: 0 auto;
+.videoContainer{
+    width: 300px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
+
+
 
 .container h3{
     color: var(--base-text1, #AACFD1);
@@ -36,6 +40,10 @@ width: 100%;
     gap: 1rem;
 }
 
+.content p{
+    color: var(--base-text2, #939C9E);
+
+}
 @media only screen and (max-width: 375px) {
 .container{
     gap: 1rem;
@@ -43,4 +51,31 @@ width: 100%;
 .container img{
     width: 180px;
 }
+}
+
+@media only screen and (min-width: 768px) {
+    .container{
+        display: grid;
+        grid-template-columns: 0.6fr 1fr;
+        align-items: center;
+        padding: 0 130px;
+        gap: 25rem;
+     }
+     .videoContainer{
+        height: 100%;
+        width: 450px;
+      
+        align-items: end;
+       
+    }
+ .container h3{
+     font-size: 48px;
+     font-weight: 400;
+ }
+ 
+ .content p{
+     font-size: 20px;
+ }
+
+
 }
