--- a/src/pages/platformFuta/Home/FutaLandings/NewLandings/FutaLanding5.module.css
+++ b/src/pages/platformFuta/Home/FutaLandings/NewLandings/FutaLanding5.module.css
@@ -37,4 +37,33 @@ font-size: 16px;
 font-style: normal;
 font-weight: 500;
 line-height: normal;
+cursor: pointer;
+}
+
+@media only screen and (min-width: 768px) {
+    .container{
+        display: grid;
+        grid-template-columns: 0.6fr 1fr;
+        align-items: center;
+        padding: 0 130px;
+     }
+     .imgContainer{
+         display: flex;
+         justify-content: flex-end;
+         align-items: flex-end;
+         height: 100%;
+     }
+     .imgContainer img{
+         width: 460px;
+     }
+ .container h3{
+     font-size: 48px;
+     font-weight: 400;
+ }
+ 
+ .content a{
+     font-size: 20px;
+ }
+
+
 }
