--- a/src/pages/platformAmbient/Chart/Chart.css
+++ b/src/pages/platformAmbient/Chart/Chart.css
@@ -4,9 +4,15 @@
     height: 100%;
     color: var(--text2);
     position: relative;
+
+    -webkit-user-select: none; /* Safari */
+    -ms-user-select: none; /* IE 10 and IE 11 */
+    user-select: none; /* Standard syntax */
+
+    -webkit-touch-callout: none;
 }
 
-.main_layout_chart  text {
+.main_layout_chart text {
     fill: var(--text2);
 }
 
@@ -16,8 +22,8 @@ text.market {
     fill: black;
 }
 
-.main_layout_chart  d3fc-canvas,
-.main_layout_chart  d3fc-svg {
+.main_layout_chart d3fc-canvas,
+.main_layout_chart d3fc-svg {
     overflow: hidden;
     grid-column-start: 1;
     grid-column-end: 2;
@@ -52,28 +58,28 @@ text.y_axis {
 }
 
 .domain,
-.tick>path,
+.tick > path,
 .gridline-y,
 .gridline-x {
     stroke: var(--text2);
     stroke-opacity: 0.1;
 }
 
-.annotation-line>.line {
+.annotation-line > .line {
     stroke: var(--text2);
     stroke-width: 3;
     stroke-dasharray: 16 16;
     border: 2px dashed var(--text2);
 }
 
-.annotation-line>.order_sell {
+.annotation-line > .order_sell {
     stroke: var(--accent2);
     stroke-width: 3;
     stroke-dasharray: 16 16;
     border: 2px dashed var(--accent2);
 }
 
-.annotation-line>.order_buy {
+.annotation-line > .order_buy {
     stroke: var(--accent1);
     stroke-width: 3;
     stroke-dasharray: 16 16;
@@ -88,7 +94,7 @@ text.y_axis {
     border: 2px dashed var(--text2);
 }
 
-.annotation-line>.ghostline {
+.annotation-line > .ghostline {
     stroke: var(--text2);
     stroke-width: 1;
     stroke-opacity: 0.5;
@@ -234,7 +240,7 @@ div.tooltip {
     stroke-opacity: 1;
 }
 
-.main_layout_chart  label {
+.main_layout_chart label {
     color: rgba(204, 204, 204, 0.63);
     padding-left: 7px;
     padding-top: 2px;
@@ -249,7 +255,9 @@ div.tooltip {
 .orderHistoryTooltip-enter-active {
     opacity: 1;
     transform: translateX(0);
-    transition: opacity 0.5s ease-in-out, transform 0.5s ease-in-out;
+    transition:
+        opacity 0.5s ease-in-out,
+        transform 0.5s ease-in-out;
 }
 
 .orderHistoryTooltip-exit {
@@ -260,7 +268,9 @@ div.tooltip {
 .orderHistoryTooltip-exit-active {
     opacity: 0;
     transform: translateX(100%);
-    transition: opacity 0.5s ease-in-out, transform 0.5s ease-in-out;
+    transition:
+        opacity 0.5s ease-in-out,
+        transform 0.5s ease-in-out;
 }
 
 .orderHistoryHeader {
@@ -296,7 +306,9 @@ div.tooltip {
 .lastCandleTooltip-enter-active {
     opacity: 1;
     transform: translateX(0);
-    transition: opacity 0.5s ease-in-out, transform 0.5s ease-in-out;
+    transition:
+        opacity 0.5s ease-in-out,
+        transform 0.5s ease-in-out;
 }
 
 .lastCandleTooltip-exit {
@@ -307,7 +319,9 @@ div.tooltip {
 .lastCandleTooltip-exit-active {
     opacity: 0;
     transform: translateX(100%);
-    transition: opacity 0.5s ease-in-out, transform 0.5s ease-in-out;
+    transition:
+        opacity 0.5s ease-in-out,
+        transform 0.5s ease-in-out;
 }
 
 .scroll {
@@ -336,7 +350,6 @@ div.tooltip {
 }
 
 @media only screen and (max-width: 768px) {
-
     /* .main_layout_chart{
         padding: 0 1rem;
     } */
