--- a/src/App/components/PageHeader/UserMenu/WalletDropdown/WalletDropdown.module.css
+++ b/src/App/components/PageHeader/UserMenu/WalletDropdown/WalletDropdown.module.css
@@ -73,8 +73,9 @@
 }
 
 .logoName img{
-    width: 25px;
-        height: 25px;
+    width: 30px;
+        height: 30px;
+        border-radius: 50%;
 }
 
 .tokenAmount{
