--- a/src/pages/platformFuta/Home/FutaLandings/FutaLandingNav.module.css
+++ b/src/pages/platformFuta/Home/FutaLandings/FutaLandingNav.module.css
@@ -175,3 +175,13 @@ margin-bottom: -8px;
 }
 
 }
+
+@media only screen and (min-width: 1280px) {
+.container{
+   
+    padding-left: 128px;
+    padding-right: 128px;
+   
+}
+
+}
