--- a/src/pages/platformFuta/Home/FutaLandings/NewLandings/FutaLanding3.module.css
+++ b/src/pages/platformFuta/Home/FutaLandings/NewLandings/FutaLanding3.module.css
@@ -59,7 +59,7 @@ width: 100%;
         grid-template-columns: 0.6fr 1fr;
         align-items: center;
         padding: 0 130px;
-        gap: 25rem;
+        /* gap: 25rem; */
      }
      .videoContainer{
         height: 100%;
@@ -79,3 +79,28 @@ width: 100%;
 
 
 }
+
+@media (min-width: 376px) and (max-width: 1028px) {
+    .container{
+        padding: 1rem ;
+        grid-template-columns: 1fr 0.6fr;
+    }
+    .content p{
+        font-size: 22px;
+    }
+
+    .videoContainer{
+        align-items: center;
+    }
+}
+@media only screen and (min-width: 1280px) {
+    .container{
+        /* background-color: yellow; */
+        padding-left: 192px;
+        padding-right: 192px;
+        grid-template-columns: 1fr 0.6fr;
+  
+    }
+    
+    
+    }
