--- a/src/pages/platformFuta/Home/FutaLandings/NewLandings/FutaNewLanding.module.css
+++ b/src/pages/platformFuta/Home/FutaLandings/NewLandings/FutaNewLanding.module.css
@@ -12,12 +12,16 @@
 
 .content{
     width: 100%;
-    height: 100%;
+    height: calc(100svh - 60px);
     display: grid;
     grid-template-rows: 1fr 185px;
 
     background: var(--dark1);
 
+   
+
     
 }
+
+
 
