--- a/src/pages/platformFuta/Home/FutaLandings/NewLandings/FutaLanding2.module.css
+++ b/src/pages/platformFuta/Home/FutaLandings/NewLandings/FutaLanding2.module.css
@@ -8,6 +8,11 @@
     gap: 48px;
     padding: 0 16px;
     background-color: transparent;
+    background: url('../../../../../assets/futa/home/background.png') no-repeat center center fixed; 
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
 }
    
 
