--- a/src/pages/platformFuta/Home/FutaLandings/NewLandings/FutaNewLanding.module.css
+++ b/src/pages/platformFuta/Home/FutaLandings/NewLandings/FutaNewLanding.module.css
@@ -3,7 +3,11 @@
     height: calc(100svh - 60px);
     scroll-behavior: smooth;
     
-
+    /* background: url('../../../../../assets/futa/home/background.png') no-repeat center center fixed; 
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover; */
     
    
 }
