--- a/src/pages/platformFuta/Home/FutaLandings/NewLandings/FutaLanding4.module.css
+++ b/src/pages/platformFuta/Home/FutaLandings/NewLandings/FutaLanding4.module.css
@@ -7,6 +7,11 @@
     align-items: center;
     gap: 48px;
     padding: 0 16px;
+    background: url('../../../../../assets/futa/home/background.png') no-repeat center center fixed; 
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
    
 }
 
