--- a/src/pages/platformFuta/Home/FutaLandings/NewLandings/FutaLanding2.module.css
+++ b/src/pages/platformFuta/Home/FutaLandings/NewLandings/FutaLanding2.module.css
@@ -13,6 +13,8 @@
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
+
+   
 }
    
 
@@ -50,12 +52,29 @@ width: 100%;
 }
 
 
-@media only screen and (max-width: 375px) {
+@media only screen and (max-width: 500px) {
 .container{
     gap: 1rem;
 }
-.container img{
+
+.imgContainer{
+   
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    object-fit: contain;
+}
+.imgContainer img{
+    object-fit: contain;
+    max-width: 100%;
+    max-height: 100%;
     width: 180px;
+    
+}
+
+.content p{
+    font-size: 18px !important;
 }
 }
 
