--- a/src/pages/platformFuta/Home/FutaLandings/NewLandings/FutaLanding3.module.css
+++ b/src/pages/platformFuta/Home/FutaLandings/NewLandings/FutaLanding3.module.css
@@ -49,14 +49,31 @@ width: 100%;
     color: var(--base-text2, #939C9E);
 
 }
-@media only screen and (max-width: 375px) {
-.container{
-    gap: 1rem;
-}
-.container img{
-    width: 180px;
-}
-}
+@media only screen and (max-width: 500px) {
+    .container{
+        gap: 1rem;
+    }
+    
+    .imgContainer{
+       
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        object-fit: contain;
+    }
+    .imgContainer img{
+        object-fit: contain;
+        max-width: 100%;
+        max-height: 100%;
+        width: 180px;
+        
+    }
+    
+    .content p{
+        font-size: 18px !important;
+    }
+    }
 
 @media only screen and (min-width: 768px) {
     .container{
