--- a/src/pages/platformFuta/Home/FutaLandings/NewLandings/FutaLanding4.module.css
+++ b/src/pages/platformFuta/Home/FutaLandings/NewLandings/FutaLanding4.module.css
@@ -82,6 +82,10 @@ line-height: normal;
         flex-direction: column;
         align-items: center;
     }
+
+    .content p{
+        font-size: 18px !important;
+    }
     
     }
 
