--- a/src/components/Futa/Navbar/Navbar.module.css
+++ b/src/components/Futa/Navbar/Navbar.module.css
@@ -4,7 +4,7 @@
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
-    height: 56px;
+    height: 41px;
     padding: 8px 16px 8px 16px;
     position: relative;
     font-family: 'Roboto Mono';
@@ -111,6 +111,18 @@
     gap: 32px;
 }
 
+.logoContainer h3{
+    color: var(--text1, #AACFD1);
+    text-align: center;
+    leading-trim: both;
+    text-edge: cap;
+    font-family: "Fira Mono";
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+}
+
 .desktopLinksContainer {
     display: flex;
     flex-direction: row;
@@ -173,103 +185,75 @@
 
 
 
-/*  */
-
-/* Tabs.module.css */
-
-.tabs {
-    overflow: hidden;
-    width: 100%;
-    margin: 0;
-    padding: 0;
+/* Slanted Tabs Styles */
+.navTabs {
     list-style: none;
 
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-wrap: wrap;
-border: 3px solid #5C6F72;
-height: 36px;
-   
-  }
-  
-  /* .tabItem {
-    float: left;
-    margin: 0 0.5em 0 0;
-  } */
-  
-  .tabLink {
-    position: relative;
-    /* background: #ddd; */
-    /* background-image: linear-gradient(to bottom, #fff, #ddd); */
-    background: transparent;
-    /* padding: 0.7em 3.5em; */
-    /* padding: 10px 0; */
-    width: 200px;
-    float: left;
-    text-decoration: none;
-    color: var(--text1, #AACFD1);
-    
-
-    font-family: "Fira Mono";
-    font-size: 20px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-    text-transform: uppercase;
-    transition: background 0.3s;
-height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    
+    padding: 0;
     text-align: center;
-    height: 36px;
-  }
-  
-  .tabLink:hover,
-  .tabLink:hover::after,
-  .tabLink:focus,
-  .tabLink:focus::after {
-    background: #fff;
-  }
-  
-  .tabLink:focus {
-    outline: 0;
-  }
-  
-  .tabLink::after {
-    content: '';
-    position: absolute;
-    z-index: 1;
-    top: 0;
-    right: -0.5em;
-    bottom: 0;
-    width: 3px;
-    background: #5C6F72;
-    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.4);
-    transform: skew(10deg);
-    border-radius: 0 5px 0 0;
-  }
-
-.currentLink::after{
-    content: '';
-    position: absolute;
-    z-index: 1;
-    top: 0;
-    right: -0.5em;
-    bottom: 0;
-    width: 3px;
-    background: #5C6F72;
-    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.4);
-    transform: skew(10deg);
-    border-radius: 0 5px 0 0;
+    display: flex;
+    gap: 0px;
+    height: 32px;
+    
 }
-  
-  .currentTab a,
-  .currentTab a::after {
-    background: #fff;
-    z-index: 3;
-  }
 
- 
+.navItem {
+    display: inline-block;
+}
+
+.navLink {
+    background: transparent;
+    color: var(--text1);
+    text-transform: uppercase;
+    font-size: 20px;
+    font-weight: 400;
+    border: 2px solid #5C6F72;
+    display: block;
+    line-height: 1;
+    padding: 0.2em 1.5em;
+    position: relative;
+    text-decoration: none;
+    transform: skewX(25deg);
+    display: inline-block;
+    border-radius: 0;
+    transition: background 0.3s, color 0.3s;
+}
+/*
+/* Remove skew only on the left side of the first tab */
+.navItem:first-child .navLink  {
+    transform: none; /* Removes slant on the left side */
+    padding-left: 1.5em; /* Adjust padding for alignment */
+    position: relative;
+    
+}
+
+/* Add slant back to the right side of the first tab */
+.navItem:first-child .navLink::after  {
+    content: '';
+    position: absolute;
+    top: 0;
+    right: -2px; /* Adjust to control the slant angle */
+    height: 100%;
+    width: 3px; /* Width to match the slant */
+    background: #5C6F72; /* Match the border color */
+    transform: skewX(25deg); /* Slant effect on the right side */
+    border-top: 2px solid #5C6F72;
+    border-bottom: 2px solid #5C6F72;
+    
+}
+.slantedText {
+    transform: skewX(-27deg);
+    display: inline-block;
+}
+
+
+.navLink:hover,
+.navLink:focus {
+    background: var(--text1);
+    color: var(--dark1);
+}
+
+.active {
+    background: var(--text1);
+    color: var(--dark1);
+}
