create vault header

--- a/src/pages/platformAmbient/Vaults/VaultRow/VaultRow.module.css
+++ b/src/pages/platformAmbient/Vaults/VaultRow/VaultRow.module.css
@@ -5,9 +5,32 @@
     width: 100%;
     padding: 8px;
     display: grid;
-    grid-template-columns: auto repeat(4, 1fr) 100px;
+    grid-template-columns: 120px repeat(4, 1fr) 100px;
     align-items: center;
 }
+
+
+.vaultHeader{
+    width: 100%;
+    padding: 0 8px;
+    padding-top: 4px;
+    display: grid;
+    grid-template-columns: 120px repeat(4, 1fr) 100px;
+    align-items: center;
+}
+
+.vaultHeader span{
+    text-align: end;
+
+    color: var(--text2, #8B98A5);
+text-align: right;
+
+font-size: 12px;
+font-style: normal;
+font-weight: 300;
+line-height: normal;
+}
+
 
 .tempestDisplay {
     width: 30px;
@@ -20,8 +43,8 @@
 }
 
 .tempestDisplay img {
-    max-width: 100%;
-    max-height: 100%;
+    max-width: 90%;
+    max-height: 90%;
 }
 .poolName {
     color: var(--text1, #f0f0f8);
@@ -94,8 +117,8 @@ height: 25px;
 
 @media only screen and (max-width: 768px) {
 
-.mainContent{
-    grid-template-columns: auto repeat(2, 1fr)  50px 100px;
+.mainContent, .vaultHeader{
+    grid-template-columns: 50px repeat(2, 1fr)  50px 100px;
 }
 .poolName{
     display: none;
@@ -103,16 +126,22 @@ height: 25px;
 
 .tvlDisplay, .apyDisplay, .depositContainer{
     font-size: 14px;
+   
 }
 }
 
 @media only screen and (max-width: 428px) {
-.mainContent{
-    grid-template-columns: auto repeat(2, 1fr)  50px 70px;
+.mainContent, .vaultHeader{
+    grid-template-columns: 50px repeat(2, 1fr)  50px 70px;
 }
 
 .tempestDisplay{
     display: none;
+}
+
+.depositContainer{
+    word-wrap: break-word;
+    
 }
 
 
