--- a/src/pages/platformAmbient/Vaults/VaultRow/VaultRow.module.css
+++ b/src/pages/platformAmbient/Vaults/VaultRow/VaultRow.module.css
@@ -44,10 +44,14 @@
     max-width: 90%;
     max-height: 90%;
 }
+
 .poolName {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    align-items: center;
     color: var(--text1, #f0f0f8);
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-
     /* large */
     -webkit-text-stroke-width: 1;
     -webkit-text-stroke-color: #000;
@@ -57,7 +61,13 @@
     line-height: normal;
     letter-spacing: -0.48px;
     text-align: end;
+    gap: 14px;
 }
+
+.poolName:hover {
+    cursor: pointer;
+}
+
 .tvlDisplay {
     color: var(--text1, #f0f0f8);
     text-align: end;
