--- a/src/pages/platformAmbient/Vaults/VaultActionModal/VaultDeposit/VaultDeposit.module.css
+++ b/src/pages/platformAmbient/Vaults/VaultActionModal/VaultDeposit/VaultDeposit.module.css
@@ -6,6 +6,7 @@
     gap: 16px;
     min-height: 348px;
     position: relative;
+    width: 398px;
 }
 .content{
     width: 100%;
@@ -93,4 +94,42 @@
    right: 0;
    left: 0;
    margin: 0 auto;
+}
+
+.confContainer{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+
+    color: var(--text2, #8B98A5);
+text-align: center;
+
+font-family: "Lexend Deca";
+font-size: 12px;
+font-style: normal;
+font-weight: 300;
+line-height: normal;
+}
+
+.confDetails{
+    width: 100%;
+    display: flex;
+    border-radius: 4px;
+border: 1px solid var(--dark3, #1E1E24);
+padding: 8px;
+flex-direction: column;
+align-items: center;
+gap: 10px;
+align-self: stretch;
+}
+
+.confRow{
+    width: 100%;
+display: flex;
+flex-direction: row;
+align-items: center;
+justify-content: space-between;
+
+
 }
