--- a/src/pages/platformAmbient/Vaults/VaultActionModal/VaultDeposit/VaultDeposit.module.css
+++ b/src/pages/platformAmbient/Vaults/VaultActionModal/VaultDeposit/VaultDeposit.module.css
@@ -1,4 +1,4 @@
-.container{
+.container {
     width: 100%;
     padding: 16px;
     display: flex;
@@ -8,9 +8,9 @@
     position: relative;
     width: 398px;
 }
-.content{
-    width: 100%;
 
+.content {
+    width: 100%;
     display: flex;
     flex-direction: column;
     background: var(--dark2);
@@ -18,6 +18,12 @@
     gap: 8px;
     padding: 8px 8px 8px 16px;
     /* height: 81px; */
+}
+
+.disclaimer {
+    font-size: 10px;
+    font-weight: 200;
+    text-align: center;
 }
 
 .tokenQuantityContainer {
