--- a/src/pages/platformAmbient/Vaults/VaultActionModal/VaultDeposit/VaultDeposit.module.css
+++ b/src/pages/platformAmbient/Vaults/VaultActionModal/VaultDeposit/VaultDeposit.module.css
@@ -134,7 +134,20 @@ justify-content: space-between;
 
 }
 
+.gas_row{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
 
+    color: var(--text2, #8B98A5);
+text-align: center;
+font-family: "Lexend Deca";
+font-size: 12px;
+font-style: normal;
+font-weight: 300;
+line-height: normal;
+}
 .loading {
     display: flex;
     align-items: center;
