--- a/src/pages/platformAmbient/Vaults/VaultActionModal/VaultWithdraw/VaultWithdraw.module.css
+++ b/src/pages/platformAmbient/Vaults/VaultActionModal/VaultWithdraw/VaultWithdraw.module.css
@@ -152,6 +152,22 @@ padding: 8px ;
     font-weight: 300;
     line-height: normal;
 }
+.gas_row{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: flex-end;
+    gap: 8px;
+
+    color: var(--text2, #8B98A5);
+text-align: center;
+font-family: "Lexend Deca";
+font-size: 12px;
+font-style: normal;
+font-weight: 300;
+line-height: normal;
+padding: 0 8px;
+}
 
 .loading {
     display: flex;
