--- a/src/pages/platformAmbient/Vaults/VaultRow/VaultRow.module.css
+++ b/src/pages/platformAmbient/Vaults/VaultRow/VaultRow.module.css
@@ -142,7 +142,7 @@
 @media only screen and (max-width: 428px) {
     .mainContent,
     .vaultHeader {
-        grid-template-columns: 50px repeat(2, 1fr) 50px 70px;
+        grid-template-columns: 50px repeat(2, 1fr) 80px ;
     }
 
     .tempestDisplay {
@@ -151,5 +151,9 @@
 
     .depositContainer {
         word-wrap: break-word;
+    }
+
+    .apyDisplay{
+        display: none;
     }
 }
