--- a/src/pages/platformAmbient/Vaults/VaultActionModal/VaultWithdraw/VaultWithdraw.module.css
+++ b/src/pages/platformAmbient/Vaults/VaultActionModal/VaultWithdraw/VaultWithdraw.module.css
@@ -169,6 +169,17 @@ line-height: normal;
 padding: 0 8px;
 }
 
+.zapContainer{
+    background: var(--dark2);
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    padding: 8px;
+    border-radius: 4px;
+    color: var(--text2)
+}
+
 .loading {
     display: flex;
     align-items: center;
